Fix button stretching now it is aligning properly and looking nice

--- a/style.css
+++ b/style.css
@@ -3,17 +3,19 @@
 body {
     display: flex;
     min-height: 100vh;
-   
     flex-direction: column;
     font-family: 'Roboto', sans-serif;
     justify-content: space-between;
     margin: 0;
-
 }
 
 .hero {
     background-color: #1f2937   ;
     height: 500px;
+    display: flex;
+    flex-direction: column;
+    align-items: space-evenly;
+    gap: 80px;
 }
 
 .header {
@@ -22,11 +24,40 @@ justify-content: space-around;
 }
 
 .hero-section {
-    
+    display: flex;
+    justify-content: space-evenly;
 }
+
+.block1 {
+    display: flex;
+    flex-wrap: wrap;
+    max-width: 450px;
+    gap: 10px;
+    flex-direction: column;
+    flex-grow: 0;
+    align-items: flex-start;
+}
+
+button {
+    cursor: pointer;
+    padding: 10px 32px;
+    border-radius: 10px;
+    background: #3882f6;
+    color: white;
+    font-size: 20px;
+    
+    }
+  
+.signup {
+    background: royalblue;
+    border: 1px solid royalblue;
+    color: white;
+    
+  }
 
 .h-title {
     font-size: 48px;
+    color: #E5E7EB;
 }
 
 .info {
@@ -47,7 +78,7 @@ a {
     text-decoration: none;
 }
 
-a, .header {
+a, .text, .header {
     font-size: 18px;
     color: #E5E7EB;
 }
@@ -60,3 +91,32 @@ a, .header {
     justify-content: center;
     align-items: center;
 }
+
+.mainlogo {
+    
+    height: 150px;
+    width: auto;
+
+    
+}
+
+
+
+  .placeholder {
+    width: 300px;
+    height: 200px;
+  }
+
+  .info {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+  }
+  .infocontainer {
+    display: flex;
+    justify-content: center;
+
+  }
+
+  
